refactor Tree class
Signed-off-by: Ch-Adrian <aderter116@gmail.com>